--- a/_includes/css/grid1.scss
+++ b/_includes/css/grid1.scss
@@ -1,3 +1,20 @@
+$donker : #222;
+$donker-alt : #333;
+$wit : #FFF;
+$defaultspace : 8px;
+
+$primary : rgba(255, 102, 0, 1);
+$primary-dark : darken( $primary, 10% );
+$primary-light : lighten( $primary, 10% );
+
+$beaconblauw : #39DBCC;
+$gubatgeel : #FFCC00;
+$orbitgreen : #4fe38b;
+
+$fontstack : sans-serif, arial, verdana;
+$fontstackAlt : 'orbitron-light',sans-serif, arial, verdana;
+$fontstackTitle : 'orbitron-bold',sans-serif, arial, verdana;
+
 .item {
   background-color: darken($wit,10%);
   width: 100%;
